<resources>
    <string name="app_name">ProjectePay</string>
    <!--分类页面位置选择-->
    <string name="tv_location_select">位置选择</string>
    <!--分类页面搜索框搜索内容提示-->
    <string name="et_please_enter_a_search">请输入搜索内容</string>
    <!--搜索-->
    <string name="search">搜索</string>
    <!--分类布局图片下面的字-->
    <string name="tt_digital_product">数码产品</string>
    <string name="tt_clothe">日常衣物</string>
    <string name="tt_household">家电</string>
    <string name="tt_cosmetology">美容</string>
    <string name="tt_sporting_goods">体育用品</string>
    <string name="tt_maternal_child">母婴儿童</string>
    <string name="tt_tablet_computer">平板电脑</string>
    <string name="tt_notebook_pc">笔记本电脑</string>
    <string name="cate_pc">电脑</string>

    <!--底部菜单栏-->
    <string name="tt_classify">分类</string>
    <string name="tt_news">消息</string>
    <string name="tt_publish">发布</string>
    <string name="tt_transaction">交易</string>
    <string name="tt_me">我的</string>
    <!--消息页面-->
    <string name="tv_news">消息</string>
    <string name="tv_return">返回</string>
    <!--交易页面-->
    <string name="tv_transaction">交易</string>
    <string name="tv_buy">已买到的宝贝</string>
    <string name="tv_sell">已卖出的宝贝</string>
    <!--发布页面-->
    <string name="tv_publish">发布</string>
    <string name="tv_select">添加图片</string>
    <string name="tv_addInfo">商品名</string>
    <string name="tv_selectCategory">分类</string>
    <string name="tv_selectPrice">价格</string>
    <!--登录页面-->
    <string name="tv_login">登录</string>
    <string name="tv_settings">设置</string>


    <!--2017年04月20日17:51:20 chen-->
    <!--本地缓存,用户的默认昵称-->
    <string name="local_def_name">游客</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--2017年04月26日17:46:20-->
    <string name="admin">Admin</string>
    <!--2017年04月27日10:20:19-->

    <string name="brand">品 牌</string>
    <string name="name">商品名</string>
    <string name="price">价 格</string>
    <string name="location">所在地</string>
    <string name="follow_goods">收 藏</string>
    <string name="bid">出 价</string>
    <string name="_null">unknown</string>


    <string name="add_success">添加成功</string>
    <string name="add_failure">添加失败</string>
    <string name="error_code">错误代码:</string>
    <string name="tab">  </string>

    <!--如果修改这部分内容,务必同时修改 GeneralListViewActivity 中的内容-->
    <string name="my_follow">我的收藏</string>
    <string name="my_goods">我上架的</string>
    <string name="my_history">浏览历史</string>
    <string name="my_auction">我竞拍的</string>
    <string name="my_transaction">我的交易</string>
    <string name="my_package">我的物流</string>


    <!--2017年04月27日14:32:35-->
    <string name="account_info">个人信息</string>
    <string name="account_name">昵称</string>
    <string name="account_gender">性别</string>
    <string name="account_birth">出生日期</string>
    <string name="account_header">头像</string>
    <string name="account_password">密码</string>
    <string name="stars">**********</string>
</resources>
