<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_publish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.chao117.projectepay.view.activity.PublishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/textPrimary"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:textSize="16sp"
            android:id="@+id/tvPubReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_return" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:textColor="@color/textPrimary"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="40sp"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_publish" />


        <TextView
            android:textColor="@color/textPrimary"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:id="@+id/tvPubSearch"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_search" />


    </LinearLayout>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.chao117.projectepay.base.view.IconView

            android:id="@+id/icvPubSelectImg"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            app:image_resource="@mipmap/img_pc"
            android:text="@string/tv_select"
            app:image_tint="@color/icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    <TextView
        android:textColor="@color/textPrimary"
        android:id="@+id/tvPubAddInfo"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:layout_marginLeft="32dp"
        android:text="@string/tv_addInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/textPrimary"
        android:id="@+id/tvPubSelectCate"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:layout_marginLeft="32dp"
        android:text="@string/tv_selectCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/textPrimary"
        android:id="@+id/tvPubSelectPrice"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:layout_marginLeft="32dp"
        android:text="@string/tv_selectPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPublish"
        android:layout_margin="16dp"
        android:paddingLeft="150dp"
        android:textSize="24sp"
        android:background="@color/colorAccent"
        android:textColor="@color/textPrimary"
        android:text="@string/tv_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.chao117.projectepay.base.view.IconView
            app:image_tint="@color/icons"
            app:image_height="24sp"
            app:image_width="24sp"
            android:layout_weight="1"
            android:textColor="@color/textPrimary"
            android:text="@string/tt_classify"
            android:id="@+id/icvPubClassify"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <com.chao117.projectepay.base.view.IconView
            app:image_tint="@color/icons"
            app:image_height="24sp"
            app:image_width="24sp"
            android:layout_weight="1"
            android:textColor="@color/textPrimary"
            android:text="@string/tt_news"
            android:id="@+id/icvPubNews"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <com.chao117.projectepay.base.view.IconView
            app:image_tint="@color/icons"
            app:image_width="32sp"
            android:layout_weight="1"
            android:textColor="@color/textPrimary"
            app:image_height="32sp"
            android:text="@string/tt_publish"
            android:id="@+id/icvPubPublish"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <com.chao117.projectepay.base.view.IconView
            app:image_tint="@color/icons"
            app:image_height="24sp"
            app:image_width="24sp"
            android:layout_weight="1"
            android:textColor="@color/textPrimary"
            android:text="@string/tt_transaction"
            android:id="@+id/icvPubTransaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <com.chao117.projectepay.base.view.IconView
            app:image_tint="@color/icons"
            app:image_height="24sp"
            app:image_width="24sp"
            android:layout_weight="1"
            android:textColor="@color/textPrimary"
            android:text="@string/tt_me"
            android:id="@+id/icvPubMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
