<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chao117.projectepay.view.activity.AccountInfoActivity">

    <LinearLayout
        android:id="@+id/containerAccountHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_header"
            android:textColor="@color/textPrimary" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_1818" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_name"
            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/edAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/_null"
            android:textColorHint="@color/textPrimary"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerAccountGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_gender"
            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/edAccountGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/_null"
            android:textColorHint="@color/textPrimary"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerAccountBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_birth"
            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/edAccountBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/_null"
            android:textColorHint="@color/textPrimary"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_password"
            android:textColor="@color/textPrimary" />

        <EditText
            android:id="@+id/edAccountPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/stars"
            android:textColorHint="@color/textPrimary"
            android:textSize="@dimen/dialog_text_size" />
        android:textColor="@color/textSecondary" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/ibAccountLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/lock" />
</LinearLayout>
